[gd_scene load_steps=8 format=2]

[ext_resource path="res://art assets/Player_Idle.png" type="Texture" id=1]
[ext_resource path="res://art assets/Game Title.png" type="Texture" id=2]
[ext_resource path="res://art assets/Menu/Play.png" type="Texture" id=3]
[ext_resource path="res://art assets/Menu/Settings.png" type="Texture" id=4]
[ext_resource path="res://art assets/Menu/Costumes.png" type="Texture" id=5]
[ext_resource path="res://art assets/Menu/Credits.png" type="Texture" id=6]
[ext_resource path="res://scenes/Menu/Main Menu.gd" type="Script" id=7]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Visuals" type="VBoxContainer" parent="."]
anchor_left = -0.000976563
anchor_top = 0.00173611
anchor_right = 0.999023
anchor_bottom = 1.00174
margin_left = 75.0
margin_top = 75.0
margin_right = -75.0
margin_bottom = -75.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Rat" type="Sprite" parent="Visuals"]
position = Vector2( 126.245, 40.8153 )
scale = Vector2( 13.3937, 13.3937 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Plague Rats" type="Sprite" parent="Visuals"]
position = Vector2( 436.024, 97.6637 )
scale = Vector2( 8.86667, 8.86667 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Play" type="Button" parent="."]
margin_left = 408.0
margin_top = 317.721
margin_right = 494.0
margin_bottom = 357.721
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Play"]
position = Vector2( 48, 24 )
scale = Vector2( 2.93333, 2.93333 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Settings" type="Button" parent="."]
margin_left = 400.0
margin_top = 365.0
margin_right = 568.0
margin_bottom = 413.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Settings"]
position = Vector2( 104, 24 )
scale = Vector2( 2.6, 3.00417 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Costumes" type="Button" parent="."]
margin_left = 401.151
margin_top = 424.0
margin_right = 577.151
margin_bottom = 472.0
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Costumes"]
position = Vector2( 112, 24 )
scale = Vector2( 2.71667, 3.03333 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Credits" type="Button" parent="."]
margin_left = 401.0
margin_top = 472.0
margin_right = 569.0
margin_bottom = 516.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Credits"]
position = Vector2( 77.425, 25.9052 )
scale = Vector2( 2.65, 3.06667 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Costumes" to="." method="_on_Costumes_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
